Enhances multi-lottery functionality

--- a/v2.html
+++ b/v2.html
@@ -64,12 +64,10 @@
     </div>
 		<div class="allPlays column1">
       <h2 id="totals"><em class="gameName">6 Balls</em> Totals</h2>
-      <p class="start">Click a button to play.</p>
-      <p class="play matchesTable"></p>
+      <p class="matchesTable"></p>
     </div>
 		<div class="rules column2">
       <h2 id="overall">Overall Totals</h2>
-      <p class="start">Click a button to play.</p>
       <p class="play">You spent <strong id="amtSpent"></strong> to buy <em id="plays"></em> ticket(s).</p>
       <p class="play">You won back <strong id="amtWon"></strong>.</p>
       <h3 class="play"><strong id="netWon"></strong></h3>
