Enhances multi-lottery functionality

--- a/v2.html
+++ b/v2.html
@@ -52,18 +52,18 @@
       </p>
       <p class="start">Click a button to play.</p>
       <p class="play">You bought <strong id="lastNgames"></strong> ticket(s).</p>
-      <table class="play">
-        <tr class="play circleTable">
-          <td>Winning numbers:</td>
-          <td><strong id="winningNumbers"></strong><strong id="winningSpecial" class="specialBall"></strong></td>
+      <table class="play circleTable">
+        <tr class="play circleRow">
+          <td class="circleTableTD circleTableTDcol1">Winning numbers:</td>
+          <td class="circleTableTD"><strong id="winningNumbers"></strong><strong id="winningSpecial" class="specialBall"></strong></td>
         </tr>
-        <tr class="play play1 circleTable">
-          <td>Your numbers:</td>
-          <td><strong id="yourNumbers"></strong><strong id="yourSpecial" class="specialBall"></strong></td>
+        <tr class="play play1 circleRow">
+          <td class="circleTableTD circleTableTDcol1">Your numbers:</td>
+          <td class="circleTableTD"><strong id="yourNumbers"></strong><strong id="yourSpecial" class="specialBall"></strong></td>
         </tr>
-        <tr class="play play1 circleTable">
-          <td>Match(es):</td>
-          <td><strong id="yourNumbersMatches"></strong><strong id="yourSpecialMatches" class="specialBall"></strong></td>
+        <tr class="play play1 circleRow">
+          <td class="circleTableTD circleTableTDcol1">Match(es):</td>
+          <td class="circleTableTD"><strong id="yourNumbersMatches"></strong><strong id="yourSpecialMatches" class="specialBall"></strong></td>
         </tr>
       </table>
       <h3 class="play"><strong id="lastNnetWon"></strong></h3>
