Enhances multi-lottery functionality

--- a/v2.html
+++ b/v2.html
@@ -74,10 +74,10 @@
     </div>
 		<div class="rules column2">
       <h2 id="overall">Overall Totals</h2>
-      <p class="play">You spent <strong id="amtSpent"></strong> on <span id="plays"></span> ticket(s).</p>
-      <p class="play">You won back <strong id="amtWon"></strong>.</p>
-      <h3 class="play"><strong id="netWon"></strong></h3>
-      <p class="play playButtons"><button id="startOver" name="startOver" type="submit">Start Over</button></p>
+      <p class="results">You spent <strong id="amtSpent"></strong> on <span id="plays"></span> ticket(s).</p>
+      <p class="results">You won back <strong id="amtWon"></strong>.</p>
+      <h3 class="results"><strong id="netWon"></strong></h3>
+      <p class="playButtons results"><button id="startOver" name="startOver" type="submit">Start Over</button></p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="./resources/js/v2.js"></script>
