Enhances multi-lottery functionality

--- a/OLD v2.html
+++ b/OLD v2.html
@@ -11,6 +11,7 @@
   <body>
   	<div id="header">
   		<h1>Lottery Simulator</h1>
+		  <p class="footer">Disclaimer: This is not a real lottery. No actual spend, loss, or gain of real currency is involved.</p>
   	</div>
 		<div class="playButtons column1" id="playButtons">
       <h2>Choose Game</h2>
