Updates documentation for accuracy

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- LottoSim https://github.com/jcoffeepot/LottoSim
+Copyright jcoffeepot
+Released under the MIT license
+https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE
+Date 2018-04-09 -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -112,7 +118,10 @@ document.write(
 	<!-- <hr> -->
 	<footer id="footer" class="footer">
 		<h2><a href="./about.html">About the lottery simulator</a></h2>
-		<p>© 2018 lottosim.website. Got feedback? Please <a href="https://goo.gl/4g2yu5" target="_blank">submit your suggestions here</a>.</p>
+		<p>© 2018 jcoffeepot and released under the
+			<a href="https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>.
+			Visit us on	<a href="https://github.com/jcoffeepot/LottoSim" target="_blank">GitHub</a>.
+			Got feedback? Please <a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
 		<p><a href="./index.html"><img src="./resources/images/lottosim.ico" alt="LottoSim Logo"></a></p>
 	</footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
