Updates one game title

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ document.write(
 		<p>
 			<button id="lotto1" name="lotto1" type="submit">6 Balls</button>
 			<button id="lotto2" name="lotto2" type="submit">Superball</button>
-			<button id="lotto3" name="lotto3" type="submit">Vega Starball</button>
+			<button id="lotto3" name="lotto3" type="submit">Ultra Millions</button>
 		</p>
 		<p><strong class="gameName">6 Balls</strong><em class="gameDesc"> is a basic lottery. 6 balls are drawn. The more you match, the more you win!</em></p>
 		<hr />
