--- a/about.html
+++ b/about.html
@@ -10,7 +10,8 @@ Date 2018-04-09 -->
 	<meta charset="utf-8">
 	<!-- https://www.w3schools.com/html/html_responsive.asp -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Lottery Simulator</title>
+	<title>About the Lottery Simulator</title>
+	<meta name="description" content="This page shares more information about LottoSim.website's lottery simulations.">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display" rel="stylesheet">
 	<!-- // https://fonts.google.com/ -->
 	<link rel="stylesheet" type="text/css" href="./resources/css/styles.css">
