--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Date 2018-04-09 -->
 	<!-- https://www.w3schools.com/html/html_responsive.asp -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Lottery Simulator</title>
+	<meta name="description" content="Lottosim.website provides free lottery game simulations.">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display" rel="stylesheet">
 	<!-- // https://fonts.google.com/ -->
 	<link rel="stylesheet" type="text/css" href="./resources/css/styles.css">
