Updates meta information

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@ https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE
 Date 2018-04-09 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
 	<meta charset="utf-8">
 	<!-- https://www.w3schools.com/html/html_responsive.asp -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Lottery Simulator</title>
+	<meta name="author" content="jcoffeepot">
 	<meta name="description" content="Lottosim.website provides free lottery game simulations.">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Playfair+Display" rel="stylesheet">
 	<!-- // https://fonts.google.com/ -->
