Changes 1mil button to 100k

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ gtag("config", "UA-116394405-1");
 				<button id="play10" name="play10" type="submit">10</button>
 				<button id="play100" name="play100" type="submit">100</button>
 				<button id="play1000" name="play1000" type="submit">1,000</button>
-				<button id="play1000000" name="play1000000" type="submit">1,000,000</button>
+				<button id="play100000" name="play100000" type="submit">100,000</button>
+				<!-- <button id="play1000000" name="play1000000" type="submit">1,000,000</button> -->
 			<!-- </fieldset> -->
 		</p>
 		<p class="start">Click a button to play.</p>
