--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE
 Date 2018-04-09 -->
 
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8">
 	<!-- https://www.w3schools.com/html/html_responsive.asp -->
@@ -109,7 +109,7 @@ gtag("config", "UA-116394405-1");
 		<p>© 2018 jcoffeepot and released under the
 			<a href="https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>.
 			Visit us on	<a href="https://github.com/jcoffeepot/LottoSim" target="_blank">GitHub</a>.
-			Got feedback? Please <a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
+			Here is our <a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please <a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
 		<p><a href="./index.html"><img src="./resources/images/lottosim.ico" alt="LottoSim Logo"></a></p>
 	</footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
