Updates jQuery reference

--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ gtag("config", "UA-116394405-1");
 			Here is our <a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please <a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
 		<p><a href="./index.html"><img src="./resources/images/lottosim.ico" alt="LottoSim Logo"></a></p>
 	</footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!-- JQuery and JQueryUI -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 	<!-- backup jQuery script as per https://stackoverflow.com/questions/5257923/how-to-load-local-script-files-as-fallback-in-cases-where-cdn-are-blocked-unavai -->
 	<script>window.jQuery || document.write('<script src="./resources/js/jquery/jquery.js">\x3C/script>')</script>
 	<script src="./resources/js/lottosim.js"></script>
