--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ gtag("config", "UA-116394405-1");
 		<p>
 			<table class="tableTransparent" id="rulesTable">
 				<tr>
-					<td>Ticket price</td>
-					<td>$<input class="rulesInput" type="number" id="cost" name="cost" min="0" max="20" value="2"></td>
+					<td>Ticket price ($)</td>
+					<td><input class="rulesInput" type="number" id="cost" name="cost" min="0" max="20" value="2"></td>
 				</tr>
 				<tr>
 					<td>Regular balls range from 1 to </td>
