--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<!-- LottoSim https://github.com/jcoffeepot/LottoSim
-Copyright jcoffeepot
-Released under the MIT license
-https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE
-Date 2018-04-09 -->
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
 	<meta charset="utf-8">
 	<!-- https://www.w3schools.com/html/html_responsive.asp -->
@@ -21,15 +16,17 @@ Date 2018-04-09 -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116394405-1"></script>
 	<script>
-	window.dataLayer = window.dataLayer || [];
-function gtag() {
-  dataLayer.push(arguments);
-}
-gtag("js", new Date());
-gtag("config", "UA-116394405-1");
-</script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag("js", new Date());
+		gtag("config", "UA-116394405-1");
+	</script>
 
 </head>
+
 <body>
 	<div id="header">
 		<h1>Lottery Simulator</h1>
@@ -42,21 +39,32 @@ gtag("config", "UA-116394405-1");
 			<button id="lotto2" name="lotto2" type="submit">Superball</button>
 			<button id="lotto3" name="lotto3" type="submit">Ultra Millions</button>
 		</p>
-		<p><strong class="gameName">6 Balls</strong><em class="gameDesc"> is a basic lottery. 6 balls are drawn. The more you match, the more you win!</em></p>
+		<p>
+			<strong class="gameName">6 Balls</strong>
+			<em class="gameDesc"> is a basic lottery. 6 balls are drawn. The more you match, the more you win!</em>
+		</p>
 		<hr>
 		<p>
 			<table class="tableTransparent" id="rulesTable">
 				<tr>
 					<td>Ticket price ($)</td>
-					<td><input class="rulesInput" type="number" id="cost" name="cost" min="0" max="20" value="2"></td>
+					<td>
+						<input class="rulesInput" type="number" id="cost" name="cost" min="0" max="20" value="2">
+					</td>
 				</tr>
 				<tr>
 					<td>Regular balls range from 1 to </td>
-					<td><input class="rulesInput" type="number" id="ballsMax" name="maxBall" min="6" max="100" value="49"></td>
+					<td>
+						<input class="rulesInput" type="number" id="ballsMax" name="maxBall" min="6" max="100" value="49">
+					</td>
 				</tr>
 				<tr>
-					<td><div class="specialBall">Special balls range from 1 to </div></td>
-					<td><input class="rulesInput specialBall" type="number" id="specialBallsMax" name="maxBall" min="6" max="100" value="26"></td>
+					<td>
+						<div class="specialBall">Special balls range from 1 to </div>
+					</td>
+					<td>
+						<input class="rulesInput specialBall" type="number" id="specialBallsMax" name="maxBall" min="6" max="100" value="26">
+					</td>
 				</tr>
 			</table>
 		</p>
@@ -65,59 +73,91 @@ gtag("config", "UA-116394405-1");
 		<h2>Buy Tickets</h2>
 		<p class="playButtons">
 			<!-- <fieldset> -->
-				<!-- <legend>Tickets</legend> -->
-				<button id="play1" name="play1" type="submit">1 Ticket</button>
-				<button id="play10" name="play10" type="submit">10</button>
-				<button id="play100" name="play100" type="submit">100</button>
-				<button id="play1000" name="play1000" type="submit">1,000</button>
-				<button id="play100000" name="play100000" type="submit">100,000</button>
-				<!-- <button id="play1000000" name="play1000000" type="submit">1,000,000</button> -->
+			<!-- <legend>Tickets</legend> -->
+			<button id="play1" name="play1" type="submit">1 Ticket</button>
+			<button id="play10" name="play10" type="submit">10</button>
+			<button id="play100" name="play100" type="submit">100</button>
+			<button id="play1000" name="play1000" type="submit">1,000</button>
+			<button id="play100000" name="play100000" type="submit">100,000</button>
+			<!-- <button id="play1000000" name="play1000000" type="submit">1,000,000</button> -->
 			<!-- </fieldset> -->
 		</p>
 		<p class="start">Click a button to play.</p>
-		<p class="play">You bought <strong id="lastNgames"></strong> ticket(s).</p>
+		<p class="play">You bought
+			<strong id="lastNgames"></strong> ticket(s).</p>
 		<table class="play circleTable">
 			<tr class="play circleRow">
 				<td class="circleTableTD circleTableTDcol1">Winning numbers:</td>
-				<td class="circleTableTD"><strong id="winningNumbers"></strong><strong id="winningSpecial" class="specialBall"></strong></td>
+				<td class="circleTableTD">
+					<strong id="winningNumbers"></strong>
+					<strong id="winningSpecial" class="specialBall"></strong>
+				</td>
 			</tr>
 			<tr class="play play1 circleRow">
 				<td class="circleTableTD circleTableTDcol1">Your numbers:</td>
-				<td class="circleTableTD"><strong id="yourNumbers"></strong><strong id="yourSpecial" class="specialBall"></strong></td>
+				<td class="circleTableTD">
+					<strong id="yourNumbers"></strong>
+					<strong id="yourSpecial" class="specialBall"></strong>
+				</td>
 			</tr>
 			<tr class="play play1 circleRow">
 				<td class="circleTableTD circleTableTDcol1">Match(es):</td>
-				<td class="circleTableTD"><strong id="yourNumbersMatches"></strong><strong id="yourSpecialMatches" class="specialBall"></strong></td>
+				<td class="circleTableTD">
+					<strong id="yourNumbersMatches"></strong>
+					<strong id="yourSpecialMatches" class="specialBall"></strong>
+				</td>
 			</tr>
 		</table>
-		<h3 class="play"><strong id="lastNnetWon"></strong></h3>
+		<h3 class="play">
+			<strong id="lastNnetWon"></strong>
+		</h3>
 	</div>
 	<div class="allPlays column1">
-		<h2 id="totals"><em class="gameName">6 Balls</em> Totals</h2>
+		<h2 id="totals">
+			<em class="gameName">6 Balls</em> Totals</h2>
 		<p class="matchesTable"></p>
 	</div>
 	<div class="rules column2">
 		<h2 id="overall">Overall Totals</h2>
-		<p class="results">You spent <strong id="amtSpent"></strong> on <span id="plays"></span> ticket(s).</p>
-		<p class="results">You won back <strong id="amtWon"></strong>.</p>
-		<h3 class="results"><strong id="netWon"></strong></h3>
-		<p class="playButtons results"><button id="startOver" name="startOver" type="submit">Start Over</button></p>
+		<p class="results">You spent
+			<strong id="amtSpent"></strong> on
+			<span id="plays"></span> ticket(s).</p>
+		<p class="results">You won back
+			<strong id="amtWon"></strong>.</p>
+		<h3 class="results">
+			<strong id="netWon"></strong>
+		</h3>
+		<p class="playButtons results">
+			<button id="startOver" name="startOver" type="submit">Start Over</button>
+		</p>
 	</div>
 	<!-- <hr> -->
 	<footer id="footer" class="footer">
-		<h2><a href="./about.html">About the lottery simulator</a></h2>
+		<h2>
+			<a href="./about.html">About the lottery simulator</a>
+		</h2>
 		<p>© 2018 jcoffeepot and released under the
-			<a href="https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>.
-			Visit us on	<a href="https://github.com/jcoffeepot/LottoSim" target="_blank">GitHub</a>.
-			Here is our <a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please <a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
-		<p><a href="./index.html"><img src="./resources/images/lottosim.ico" alt="LottoSim Logo"></a></p>
+			<a href="https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>. Visit us on
+			<a href="https://github.com/jcoffeepot/LottoSim" target="_blank">GitHub</a>. Here is our
+			<a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please
+			<a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
+		<p>
+			<a href="./index.html">
+				<img src="./resources/images/lottosim.ico" alt="LottoSim Logo">
+			</a>
+		</p>
 	</footer>
 	<!-- JQuery and JQueryUI -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	    crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+	    crossorigin="anonymous"></script>
 	<!-- backup jQuery script as per https://stackoverflow.com/questions/5257923/how-to-load-local-script-files-as-fallback-in-cases-where-cdn-are-blocked-unavai -->
-	<script>window.jQuery || document.write('<script src="./resources/js/jquery/jquery.js">\x3C/script>')</script>
+	<script>
+		window.jQuery || document.write('<script src="./resources/js/jquery/jquery.js">\x3C/script>')
+	</script>
 	<script src="./resources/js/lottosim.js"></script>
 
 </body>
+
 </html>
