Update LICENSE file

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 		<h2>
 			<a href="./about.html">About the lottery simulator</a>
 		</h2>
-		<p>© 2018 jcoffeepot and released under the
-			<a href="https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>. Visit us on
-			<a href="https://github.com/jcoffeepot/LottoSim" target="_blank">GitHub</a>. Here is our
+		<p>© 2018 Hal Beresford and released under the
+			<a href="https://github.com/hbere/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>. Visit us on
+			<a href="https://github.com/hbere/LottoSim" target="_blank">GitHub</a>. Here is our
 			<a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please
 			<a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
 		<p>
