--- a/index.html
+++ b/index.html
@@ -147,10 +147,8 @@
 			</a>
 		</p>
 	</footer>
-	<!-- JQuery and JQueryUI -->
+	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-	    crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
 	    crossorigin="anonymous"></script>
 	<!-- backup jQuery script as per https://stackoverflow.com/questions/5257923/how-to-load-local-script-files-as-fallback-in-cases-where-cdn-are-blocked-unavai -->
 	<script>
