--- a/about.html
+++ b/about.html
@@ -79,10 +79,11 @@ gtag("config", "UA-116394405-1");
 	<!-- <hr> -->
 	<footer id="footer">
 		<h2><a href="./index.html">Home</a></h2>
-		<p>© 2018 jcoffeepot and released under the
-			<a href="https://github.com/jcoffeepot/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>.
-			Visit us on	<a href="https://github.com/jcoffeepot/LottoSim" target="_blank">GitHub</a>.
-			Got feedback? Please <a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
+		<p>© 2018 Hal Beresford and released under the
+			<a href="https://github.com/hbere/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>. Visit us on
+			<a href="https://github.com/hbere/LottoSim" target="_blank">GitHub</a>. Here is our
+			<a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please
+			<a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
 		<a href="./index.html"><img src="./resources/images/lottosim.ico" alt="LottoSim Logo"></a>
 	</footer>
 	<!-- JQuery and JQueryUI -->
