Update footer content

--- a/index.html
+++ b/index.html
@@ -12,19 +12,6 @@
 	<!-- // https://fonts.google.com/ -->
 	<link rel="stylesheet" type="text/css" href="./resources/css/styles.css">
 	<link rel="shortcut icon" type='image/x-icon' href="./resources/images/lottosim.ico">
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116394405-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag("js", new Date());
-		gtag("config", "UA-116394405-1");
-	</script>
-
 </head>
 
 <body>
@@ -136,10 +123,11 @@
 		<h2>
 			<a href="./about.html">About the lottery simulator</a>
 		</h2>
-		<p>© 2018 Hal Beresford and released under the
+		<p>© 2018 Hal Beresford and lottosim.website. Released under the
 			<a href="https://github.com/hbere/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>. Visit us on
-			<a href="https://github.com/hbere/LottoSim" target="_blank">GitHub</a>. Here is our
-			<a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please
+			<a href="https://github.com/hbere/LottoSim" target="_blank">GitHub</a>. Here are our
+			<a href="/terms-of-use.html">terms of use</a> and
+			<a href="/privacy-policy.html">privacy policy</a>. Got feedback? Please
 			<a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
 		<p>
 			<a href="./index.html">
