Update about.html footer

--- a/about.html
+++ b/about.html
@@ -17,18 +17,6 @@ Date 2018-04-09 -->
 	<!-- // https://fonts.google.com/ -->
 	<link rel="stylesheet" type="text/css" href="./resources/css/styles.css">
 	<link rel="shortcut icon" type='image/x-icon' href="./resources/images/lottosim.ico">
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116394405-1"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-function gtag() {
-  dataLayer.push(arguments);
-}
-gtag("js", new Date());
-gtag("config", "UA-116394405-1");
-</script>
-
 </head>
 <body>
 	<div id="header">
@@ -79,12 +67,17 @@ gtag("config", "UA-116394405-1");
 	<!-- <hr> -->
 	<footer id="footer">
 		<h2><a href="./index.html">Home</a></h2>
-		<p>© 2018 Hal Beresford and released under the
+		<p>© 2018 Hal Beresford and lottosim.website. Released under the
 			<a href="https://github.com/hbere/LottoSim/blob/master/LICENSE" target="_blank">MIT License</a>. Visit us on
-			<a href="https://github.com/hbere/LottoSim" target="_blank">GitHub</a>. Here is our
-			<a href="./privacy_policy.html">privacy policy</a>. Got feedback? Please
+			<a href="https://github.com/hbere/LottoSim" target="_blank">GitHub</a>. Here are our
+			<a href="/terms-of-use.html">terms of use</a> and
+			<a href="/privacy-policy.html">privacy policy</a>. Got feedback? Please
 			<a href="https://goo.gl/4g2yu5" target="_blank"> submit your suggestions here</a>.</p>
-		<a href="./index.html"><img src="./resources/images/lottosim.ico" alt="LottoSim Logo"></a>
+		<p>
+			<a href="./index.html">
+				<img src="./resources/images/lottosim.ico" alt="LottoSim Logo">
+			</a>
+		</p>
 	</footer>
 	<!-- JQuery and JQueryUI -->
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
